# biixie.com

./: .gitignore  compose.dev.yaml  compose.prod.yaml  compose.yaml  deploy.sh  docker-bake.dev.hcl  docker-bake.hcl  docker-bake.prod.hcl  docker-compose.yml  flake.nix
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/redacted/: redacted_terms.kvp
backend/src/: config.rs  main.rs  middleware.rs  routes.rs  secrets.rs  shared_state.rs
backend/src/middleware/: error.rs  turnstile.rs
backend/src/routes/: api.rs
backend/src/routes/api/: disclose.rs
frontend/: Dockerfile  config.toml  query_projects.sh
frontend/caddy/: Caddyfile
frontend/content/: _index.md
frontend/content/blog/: _index.md
frontend/content/services/: _index.md
frontend/queries/: github.graphql
frontend/sass/: base.scss
frontend/sass/projects/: style.scss
frontend/sass/themes/catppuccin/: palette.scss  theme.scss
frontend/static/: pgp.asc
frontend/static/js/: disclose.js  jsonly.js  navigation.js  theme-controller.js  turnstile.js
frontend/templates/: base.html  blog-page.html  blog.html  index.html  projects-page.html  projects.html  services-page.html  services.html
nginx/: nginx.conf
src/: index.html
src/css/: style.css
