[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "signal"] }
axum = { version = "0.7.9", features = ["macros"] }
tower = { version = "0.5.2", features = ["limit", "buffer"] }
tower-http = { version = "0.6.2", features = ["cors", "limit", "timeout"] }
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
simplelog = "0.12.2"
graphql_client = "0.14.0"